# cognivest

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
ai/: README.md
ai/eval/: README.md  run_eval.py
ai/prompts/: README.md  answer_generation.md  system_prompt.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/ai/: __init__.py  answer_formatter.py  prompt_templates.py
backend/src/collectors/: __init__.py  base.py  dedup.py  news_collector.py  normalizer.py  price_collector.py
backend/src/config/: __init__.py  logging.py  settings.py
backend/src/controllers/: __init__.py
backend/src/database/: __init__.py  session.py
backend/src/database/migrations/: README  __init__.py  env.py  script.py.mako
backend/src/database/migrations/versions/: .gitkeep  20260703_1423_ed47ede78f59_initial_schema.py
backend/src/memory/: __init__.py  cognee_client.py  dataset_naming.py
backend/src/middleware/: __init__.py  auth_middleware.py  rate_limit.py
backend/src/models/: __init__.py  base.py  company.py  ingested_item.py  ingestion_job.py  query_log.py  user.py  watchlist_item.py
backend/src/repositories/: __init__.py  base.py  company_repo.py  ingestion_repo.py  user_repo.py
backend/src/routes/: __init__.py  admin.py  auth.py  companies.py  memory.py
backend/src/schemas/: __init__.py  admin.py  auth.py  common.py  company.py  memory.py  query.py
backend/src/services/: __init__.py  collector_service.py  memory_service.py  query_service.py  watchlist_service.py
backend/src/utils/: __init__.py  security.py  time.py
backend/src/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_memory_delete.py
cognee/: README.md
cognee/config/: README.md  cognee.config.example.yaml
cognee/datasets/: .gitkeep  README.md
config/: README.md  logging.yaml  ratelimits.yaml  scheduling.example.yaml
data/: demo_corpus.json
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md  api.md  authentication.md  backend.md  coding-standards.md  contributing.md  database.md  demo-questions.md  deployment.md  development-workflow.md  environment.md  folder-structure.md  frontend.md  memory-architecture.md  prompting.md  roadmap.md  setup.md  spike-cognee-1.2.2.md  system-design.md
docs/runbooks/: README.md  (+3 more)
frontend/: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
scripts/: README.md  backfill_ticker.py  cognee_roundtrip.py  demo_forget.py  generate_jwt_keys.sh  ingest_demo_corpus.py  purge_dataset.py  seed.py
(+71 files in other folders)
