[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognivest-backend"
version = "0.0.0"
description = "Cognivest — per-company financial intelligence backend (FastAPI + Cognee)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Cognivest" }]

# Runtime dependencies. `requirements.txt` mirrors these for environments that
# cannot install from pyproject directly — but THIS FILE is the source of truth.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "cognee[fastembed]==1.2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "structlog>=24.1",
    "yfinance>=0.2",  # keyless market-data vendor for price history (issue #8)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.3",
    "black>=24.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "C4", "SIM"]
ignore = [
    "B008",  # FastAPI uses function calls (Depends/Query) in argument defaults.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
# `strict` is scoped to the application source tree (see `files`).
files = ["src"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
# Third-party packages without shipped type stubs.
module = ["cognee.*", "celery.*", "jose.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
filterwarnings = [
    "error::DeprecationWarning",
    # Third-party deprecations we cannot fix, emitted at import of the Cognee SDK
    # (cognee 1.2.2 still uses Pydantic v1-style Field(env=...)). Downgrade to non-fatal
    # so seam-touching tests stay collectable; our own code remains strict.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:cognee.*",
    "ignore::DeprecationWarning:litellm.*",
]
